--- a/index2.html
+++ b/index2.html
@@ -357,8 +357,8 @@
         <div class="col s12 container2 marginTop30 marginBotom30">
             <div class="col s12 m7">
                 <ul class="collapsible">
-                    <li class="padding15">
-                        <div class="collapsible-header col s12 grey lighten-5 ">
+                    <li>
+                        <div class="collapsible-header grey lighten-5 ">
                             What is MyGEN supplements?
                             <i class="material-icons right">add</i>
                         </div>
@@ -366,8 +366,8 @@
                             <span>Lorem ipsum dolor sit amet.</span>
                         </div>
                     </li>
-                    <li class="padding15">
-                        <div class="collapsible-header col s12 grey lighten-5 ">
+                    <li>
+                        <div class="collapsible-header grey lighten-5 ">
                             Can I cancel my subscription at any time?
                             <i class="material-icons right">add</i>
                         </div>
@@ -375,8 +375,8 @@
                             <span>Lorem ipsum dolor sit amet.</span>
                         </div>
                     </li>
-                    <li class="padding15">
-                        <div class="collapsible-header col s12 grey lighten-5 ">
+                    <li>
+                        <div class="collapsible-header grey lighten-5 ">
                             Is there a minimum number of genetic tests or supplements
                             I have to subscribe to?
                             <i class="material-icons right">add</i>
@@ -385,8 +385,8 @@
                             <span>Lorem ipsum dolor sit amet.</span>
                         </div>
                     </li>
-                    <li class="padding15">
-                        <div class="collapsible-header col s12 grey lighten-5 ">
+                    <li>
+                        <div class="collapsible-header grey lighten-5 ">
                             What is MyGEN supplements?
                             <i class="material-icons right">add</i>
                         </div>
@@ -394,8 +394,8 @@
                             <span>Lorem ipsum dolor sit amet.</span>
                         </div>
                     </li>
-                    <li class="padding15">
-                        <div class="collapsible-header col s12 grey lighten-5 ">
+                    <li>
+                        <div class="collapsible-header  grey lighten-5 ">
                             Can I cancel my subscription at any time?
                             <i class="material-icons right">add</i>
                         </div>
@@ -403,8 +403,8 @@
                             <span>Lorem ipsum dolor sit amet.</span>
                         </div>
                     </li>
-                    <li class="padding15">
-                        <div class="collapsible-header col s12 grey lighten-5 ">
+                    <li>
+                        <div class="collapsible-header  grey lighten-5 ">
                             Is there a minimum number of genetic tests or supplements
                             I have to subscribe to?
                             <i class="material-icons right">add</i>
@@ -413,8 +413,8 @@
                             <span>Lorem ipsum dolor sit amet.</span>
                         </div>
                     </li>
-                    <li class="padding15">
-                        <div class="collapsible-header col s12 grey lighten-5 ">
+                    <li>
+                        <div class="collapsible-header  grey lighten-5 ">
                             What is MyGEN supplements?
                             <i class="material-icons right">add</i>
                         </div>
@@ -422,47 +422,9 @@
                             <span>Lorem ipsum dolor sit amet.</span>
                         </div>
                     </li>
-                    <li class="padding15">
-                        <div class="collapsible-header col s12 grey lighten-5 ">
+                    <li>
+                        <div class="collapsible-header  grey lighten-5 ">
                             Can I cancel my subscription at any time?
-                            <i class="material-icons right">add</i>
-                        </div>
-                        <div class="collapsible-body">
-                            <span>Lorem ipsum dolor sit amet.</span>
-                        </div>
-                    </li>
-                    <li class="padding15">
-                        <div class="collapsible-header col s12 grey lighten-5 ">
-                            Is there a minimum number of genetic tests or supplements
-                            I have to subscribe to?
-                            <i class="material-icons right">add</i>
-                        </div>
-                        <div class="collapsible-body">
-                            <span>Lorem ipsum dolor sit amet.</span>
-                        </div>
-                    </li>
-                    <li class="padding15">
-                        <div class="collapsible-header col s12 grey lighten-5 ">
-                            What is MyGEN supplements?
-                            <i class="material-icons right">add</i>
-                        </div>
-                        <div class="collapsible-body">
-                            <span>Lorem ipsum dolor sit amet.</span>
-                        </div>
-                    </li>
-                    <li class="padding15">
-                        <div class="collapsible-header col s12 grey lighten-5 ">
-                            Can I cancel my subscription at any time?
-                            <i class="material-icons right">add</i>
-                        </div>
-                        <div class="collapsible-body">
-                            <span>Lorem ipsum dolor sit amet.</span>
-                        </div>
-                    </li>
-                    <li class="padding15">
-                        <div class="collapsible-header col s12 grey lighten-5 ">
-                            Is there a minimum number of genetic tests or supplements
-                            I have to subscribe to?
                             <i class="material-icons right">add</i>
                         </div>
                         <div class="collapsible-body">
@@ -485,7 +447,7 @@
 
             </div>
             <div class="col s12 m5 center-align marginTop100">
-                <hr class="col s12 orange-text">
+                <hr class="col s12 orange-text marginBotom30">
                 <p>
                     More questions? Email our MyGEN Team with any other 
                     questions or feedback you have
@@ -742,7 +704,7 @@
 </div>
 <!--============================== SHOP ===========================-->       
 <!--============================== FOOTER ===========================-->          
-    <footer class="page-footer">
+    <footer class="page-footer hide-on-small-only">
         <div class="footer">
         <div class="row">
             <div class="col l3 s12">
@@ -821,6 +783,85 @@
         </div>
     </footer>
 <!--============================== FOOTER ===========================-->          
+<!--============================== FOOTER MOBILE===========================-->   
+
+<div class="row hide-on-med-and-up" id="footerMobile">
+        <ul class="col s12 collapsible">
+            <li>
+              <div class="collapsible-header "><i class="material-icons right">add</i>ABOUT</div>
+              <div class="collapsible-body">
+                    <div class="col s12 center-align">
+                        <a href="#!" class="brand-logo bold">My<span class="grey-text">GEN</span><div class="grey-text marginBotom30">Supplemented by TAAG Genetics</div></a> 
+                    </div>
+                <ul class="marginBotom30">
+                      <li class="min-text3">PRODUCTS</li>
+                      <li><a href="" class="grey-text">Genetic tests</a></li>
+                      <li><a href="" class="grey-text">Supplements</a></li>
+                      <li><a href="" class="grey-text">How it works</a></li>
+                      <li><a href="" class="grey-text">Success stories</a></li>             
+                </ul>
+                <ul class="marginBotom30">
+                    <li class="min-text3">COMPANY</li>
+                    <li><a href="" class="grey-text">About</a></li>
+                    <li><a href="" class="grey-text">Blog</a></li>
+                    <li><a href="" class="grey-text">Contact</a></li>         
+                </ul>
+                <ul class="marginBotom30">
+                    <li class="min-text3">RESOURCES</li>
+                    <li><a href="" class="grey-text">Help</a></li>
+                    <li><a href="" class="grey-text">Privacy policy</a></li>
+                    <li><a href="" class="grey-text">Terms of use</a></li>         
+                </ul>    
+                <ul class="marginBotom30">
+                    <li class="min-text3">PARTNERS</li>
+                    <li><a href="" class="grey-text">Become a coach</a></li>      
+                </ul>     
+                <ul class="marginBotom30">
+                    <li class="min-text3">RELATED PRODUCTS</li>
+                    <li><a href="" class="grey-text">Ancestry</a></li>      
+                    <li><a href="" class="grey-text">Pharmacogenetics</a></li>      
+                </ul> 
+                <ul>
+                    <li class="min-text3">LEGAL</li>
+                    <li><a href="" class="grey-text">Privacy policy</a></li>
+                    <li><a href="" class="grey-text">Terms of use</a></li>
+                    <li><a href="contact.html" class="grey-text">Contact</a></li>
+                </ul>                             
+              </div>
+            </li>
+            <li>
+              <div class="collapsible-header"><i class="material-icons right">add</i>NEWSLETTER</div>
+              <div class="collapsible-body">
+                    <p class="bold-text">CURIOUS TO LEARN MORE?</p>
+                    <p>Join our newsletter to receive updates on actionable genetics</p>
+                    <form action="" id="formFooter" name="formFooter">
+                            <div class="input-field col s7">
+                                <input placeholder="YourEmail" id="" type="text" class="validate">           
+                            </div>
+                            <a href="" class="shop black-text col s4 push-s1">Sign Up</a>
+                           
+                    </form>
+              </div>
+            </li>
+            <li>
+              <div class="collapsible-header"><i class="material-icons right">add</i>CONNECT WITH US</div>
+              <div class="collapsible-body">
+                    <div class="social-footer center-align">
+                        <a href=""><img src="img/icons/twitter-logo-button.svg" alt=""></a>
+                        <a href=""><img src="img/icons/facebook-logo-button.svg" alt=""></a>
+                        <a href=""><img src="img/icons/instagram-logo.svg" alt=""></a>
+                    </div>  
+              </div>
+            </li>
+          </ul>
+    </div>
+    <div class="footer-copyright white paddingBottom15 hide-on-med-and-up">
+        <div class="container left-align min-text2 grey-text">
+            2018 © TAAG Genetics. All rights reserved
+        </div>
+    </div>
+            
+    <!--============================== FOOTER MOBILE===========================-->   
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
