--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
           <div class="collapsible-body">
                 <p class="bold-text">CURIOUS TO LEARN MORE?</p>
                 <p>Join our newsletter to receive updates on actionable genetics</p>
-                <form action="" id="formFooter" name="formFooter">
+                <form action="" id="formFooter2" name="formFooter2">
                         <div class="input-field col s7">
                             <input placeholder="YourEmail" id="" type="text" class="validate">           
                         </div>
