--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                 <p>Join our newsletter to receive updates on actionable genetics</p>
                 <form action="" id="formFooter2" name="formFooter2">
                         <div class="input-field col s7">
-                            <input placeholder="YourEmail" id="" type="text" class="validate">           
+                            <input placeholder="YourEmail" id="2" type="text" class="validate">           
                         </div>
                         <a href="" class="shop black-text col s4 push-s1">Sign Up</a>
                        
